--- a/templates/config/locales/views/chaltron.en.yml
+++ b/templates/config/locales/views/chaltron.en.yml
@@ -57,8 +57,8 @@ en:
           activity: Activity
           details: Details
         edit: Edit
-        enable: Abilita
-        disable: Disabilita
+        enable: Enable
+        disable: Disable
         destroy: Destroy
         destroy_confirm: Are you sure you want to destroy %{user}?
       self_show:
