--- a/templates/config/locales/views/chaltron.it.yml
+++ b/templates/config/locales/views/chaltron.it.yml
@@ -60,6 +60,9 @@ it:
       self_edit:
         title: Modifica dati personali
         submit: Invia
+      change_password:
+        title: Cambia password
+        submit: Invia
       form:
         cancel_text: Annulla
       show:
@@ -77,6 +80,7 @@ it:
           activity: Attività
           details: Dettagli
         edit: Modifica dati personali
+        change_password: Cambia password
     ldap:
       search:
         title: Ricerca utenti LDAP
@@ -87,6 +91,7 @@ it:
         lastname_help: Ricerca per cognome (anche match parziale)
         department_label: Funzione
         department_help: Ricerca per sigla di funzione (anche match parziale)
+        limit_label: Limite
         limit_help: Massimo numero di risultati visualizzati
       multi_new:
         title: Nuovi utenti LDAP
