use list instead of table in logs#index page

--- a/templates/config/locales/views/chaltron.it.yml
+++ b/templates/config/locales/views/chaltron.it.yml
@@ -27,6 +27,7 @@ it:
         title: Elenco dei log
       logs:
         search: Cerca
+        sorted_by: Ordinamento per
         category_filter: Filtra per categoria
         severity_filter: Filtra per severità
         reset_filters: Resetta filtri
