--- a/templates/config/locales/chaltron.it.yml
+++ b/templates/config/locales/chaltron.it.yml
@@ -46,12 +46,13 @@ it:
       back: Indietro
       cancel: Annulla
       clear_filter: Rimuovi filtri
-    users:
+    local_users:
       created: Utente creato con successo.
+    users:
       updated: Utente aggiornato con successo.
+      deleted: Utente cancellato con successo.
       enabled: Utente abilitato con successo.
       disabled: Utente disabilitato con successo.
-      deleted: Utente cancellato con successo.
       self_updated: Dati personali aggiornati con successo.
       cannot_self_destroy: Non puoi cancellare il tuo stesso account.
       it_s_you: Sei tu!
