--- a/templates/config/locales/views/chaltron.it.yml
+++ b/templates/config/locales/views/chaltron.it.yml
@@ -55,13 +55,6 @@ it:
         no_login: Mai loggati
       user:
         created_ago: Creato %{time} fa
-      new:
-        title: Nuovo utente locale
-        submit_text: Crea utente locale
-      edit:
-        title: Modifica %{user}
-      form:
-        cancel_text: Annulla
       show:
         headers:
           activity: Attività
@@ -71,6 +64,12 @@ it:
         disable: Disabilita
         destroy: Cancella
         destroy_confirm: Sei sicuro di voler cancellare %{user}?
+      edit:
+        title: Modifica %{user}
+    local_users:
+      new:
+        title: Nuovo utente locale
+        submit_text: Crea utente locale
     self_user:
       show:
         title: Dati personali
