--- a/templates/config/locales/views/chaltron.it.yml
+++ b/templates/config/locales/views/chaltron.it.yml
@@ -5,11 +5,11 @@ it:
         title: Password dimenticata?
         par1: Inserisci la tua email per ricevere instruzioni su come resettare la password
         submit_text: Invia
-        par2_html: Hai già delle credenziali valide? <strong><a href="/users/sign_in">Login</a></strong>
+        par2_html: Hai già delle credenziali valide? <strong><a href="/local/sign_in">Login</a></strong>
       edit:
         title: Cambio password
         submit_text: Cambia password
-        par_html: Come non detto! <strong><a href="/users/sign_in">Login</a></strong>
+        par_html: Come non detto! <strong><a href="/local/sign_in">Login</a></strong>
     sessions:
       new:
         title: Login
