--- a/templates/config/locales/views/chaltron.en.yml
+++ b/templates/config/locales/views/chaltron.en.yml
@@ -104,8 +104,11 @@ en:
         title: Create LDAP users
         result: Results
         created:
-          one:   A new user has been successfully created
+          one: A new user has been successfully created
           other: "%{count} users have been successfully created"
         error:
-          one:   A user has not been crated
+          one: A user has not been crated
           other: "%{count} users have not been created"
+  unauthorized:
+    manage:
+      all: You have no access to this resource
