--- a/templates/config/locales/views/chaltron.it.yml
+++ b/templates/config/locales/views/chaltron.it.yml
@@ -104,8 +104,11 @@ it:
         title: Creazione utenti LDAP
         result: Risultati
         created:
-          one:   È stato creato un nuovo utente
+          one: È stato creato un nuovo utente
           other: Sono stati creati %{count} nuovi utenti
         error:
-          one:   Un utente non è stato creato
+          one: Un utente non è stato creato
           other: "%{count} utenti non sono stati creati"
+  unauthorized:
+    manage:
+      all: Non sei autorizzato a vedere questa pagina
