--- a/templates/config/locales/chaltron.it.yml
+++ b/templates/config/locales/chaltron.it.yml
@@ -82,3 +82,6 @@ it:
         ldap_created:
           one: "%{current} ha creato l'utente %{user} da LDAP"
           other: "%{current} ha creato %{count} utenti da LDAP (%{user})"
+  unauthorized:
+    manage:
+      all: Non sei autorizzato a vedere questa pagina
