--- a/templates/config/locales/chaltron.en.yml
+++ b/templates/config/locales/chaltron.en.yml
@@ -55,6 +55,7 @@ en:
       disabled: User was successfully disabled.
       self_updated: Account data successfully updated.
       cannot_self_destroy: You cannot destroy your own account.
+      cannot_self_disable: You cannot disable your own account.
       it_s_you: It's you!
       user_disabled: Disabled
       missing_field: Missing!
