--- a/templates/config/locales/chaltron.it.yml
+++ b/templates/config/locales/chaltron.it.yml
@@ -1,10 +1,10 @@
 it:
   activemodel:
     attributes:
-      chaltron/log/list:
+      chaltron/log/filter:
         categories: Categoria
         severities: Severità
-      chaltron/user/list:
+      chaltron/user/filter:
         providers: Provider
         never_logged_in: Mai loggati
   activerecord:
