--- a/templates/config/locales/views/chaltron.en.yml
+++ b/templates/config/locales/views/chaltron.en.yml
@@ -95,7 +95,7 @@ en:
       multi_new:
         title: New LDAP users
         submit_text: Create LDAP users
-        par: Select users by clicking row table
+        par: Select users to be created
       multi_create:
         title: Create LDAP users
         result: Results
