--- a/templates/config/locales/views/chaltron.it.yml
+++ b/templates/config/locales/views/chaltron.it.yml
@@ -13,6 +13,8 @@ it:
     sessions:
       new:
         title: Login
+        local: Utenza locale
+        ldap: LDAP
       new_local:
         remember_me: Ricordami
         link_text: Hai dimenticato la password?
