--- a/templates/config/locales/views/chaltron.it.yml
+++ b/templates/config/locales/views/chaltron.it.yml
@@ -67,6 +67,7 @@ it:
         reset_filters: Resetta filtri
       user:
         created_ago: Creato %{time} fa
+        confirm_delete: Sei sicuro?
       edit:
         title: Modifica %{user}
     local_users:
