--- a/templates/config/locales/chaltron.en.yml
+++ b/templates/config/locales/chaltron.en.yml
@@ -52,6 +52,7 @@ en:
     access_denied: Access denied. You don't have the correct permissions to access this page!
     access_denied_try_login: Access denied. Sign in, please.
     not_allowed_to_sign_in: You are not allowed to sign in. Contact your system administrator.
+    rate_limited: Too many requests! Try again later.
     common:
       back: Back
       cancel: Cancel
