--- a/templates/config/locales/chaltron.it.yml
+++ b/templates/config/locales/chaltron.it.yml
@@ -52,6 +52,7 @@ it:
     access_denied: Accesso negato! Non hai i permessi ad accedere a questa pagina.
     access_denied_try_login: Accesso negato. Prova ad effettuare il login.
     not_allowed_to_sign_in: Accesso negato. La tua utenza non può accedere al sistema. Contatta l'amministratore.
+    rate_limited: Troppi tentativi! Riprova più tardi.
     common:
       back: Indietro
       cancel: Annulla
