--- a/templates/config/locales/views/chaltron.en.yml
+++ b/templates/config/locales/views/chaltron.en.yml
@@ -32,6 +32,10 @@ en:
         submit: Search
         reset: Reset search
   chaltron:
+    dark_mode_navbar:
+      auto: "Theme mode: auto"
+      dark: "Theme mode: dark"
+      light: "Theme mode: light"
     logs:
       index:
         title: Log list
